Add Google verificiation meta tag

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Moj test sajt</title>
+  <meta name="google-site-verification" content="neki_kod_ovde" />
 </head>
 <body>
-  <h1>Zdravo, ovo je moj prvi sajt!</h1>
-  <p>Testiram kako se sajt postavlja na internet 😎</p>
+  <h1>Zdravo svete!</h1>
+  <p>Ovo je moj prvi sajt na internetu 😎</p>
 </body>
 </html>
