Add final Google verification and meta description

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="sr">
 <head>
   <meta charset="UTF-8">
   <title>Moj test sajt</title>
-  <meta name="google-site-verification" content="neki_kod_ovde" />
+  
+  <!-- Google verifikacija -->
+  <meta name="google-site-verification" content="jje0iibnARcWUnY2twVg8UU6x8_IEJlNgM4LyIHWIkg" />
+
+  <!-- SEO meta opis -->
+  <meta name="description" content="Moj prvi test sajt na internetu, napravljen uz GitHub Pages.">
 </head>
 <body>
   <h1>Zdravo svete!</h1>
