Dodata Bing verifikacija

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <!-- SEO meta opis -->
   <meta name="description" content="Moj prvi test sajt na internetu, napravljen uz GitHub Pages.">
+
+<meta name="msvalidate.01" content="657C37F74BEAA2BAC0E96C1C23ADC509" />
 </head>
 <body>
   <h1>Zdravo svete!</h1>
